final-devops-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pranav-prod
  labels:
    name: pranav-prod
    environment: production
    managed-by: devops-platform
