final-devops-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudnexus-service
  namespace: cloudnexus-prod
  labels:
    app: cloudnexus-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: cloudnexus-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
