final-devops-project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pranav-app-ingress
  namespace: pranav-prod
  labels:
    app: pranav-app-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: pranav-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pranav-app-service
                port:
                  number: 80
